InfraAsCode/k8s/manifests/nginx-ng.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ng-loadbalancer
  namespace: identifier-generator
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx-ng
  sessionAffinity: None
  type: NodePort
