InfraAsCode/k8s/manifests/sqldb.loadbalancer-openexternal.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqldb-loadbalancer
  namespace: identifier-generator
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 1433
    targetPort: 1433
    protocol: TCP
  selector:
    app: sqldb
  sessionAffinity: None
  type: NodePort
