InfraAsCode/k8s/manifests/webapi.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapi-loadbalancer
  namespace: identifier-generator
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: webapi
  sessionAffinity: None
  type: NodePort
