InfraAsCode/k8s/manifests/identifier-generator.ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: identifier-generator
  namespace: identifier-generator
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - hosts:
    - identifier-generator.example-zone.com
    - api.identifier-generator.example-zone.com
    secretName: secret-tls
  rules:
  - host: api.identifier-generator.example-zone.com
    http:
      paths:
      - backend:
          serviceName: webapi-loadbalancer
          servicePort: 80
        path: /*
  - host: identifier-generator.example-zone.com
    http:
      paths:
      - backend:
          serviceName: nginx-ng-loadbalancer
          servicePort: 80
        path: /*
